feat: Fix the latex compile problem  1. add chinese support, 2, repair the mathematical environment definition
''

--- a/notes/test-note/main.tex
+++ b/notes/test-note/main.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{article}
+%\usepackage{styles/notes}
+%\usepackage{/Users/wanchang/Documents/GitHub/latex-notes-template/styles/notes}
 \usepackage{../../styles/notes}
-
 \title{测试笔记 - LaTeX 模板验证}
 \author{你的名字}
 \date{\today}
