--- a/styles/notes.sty
+++ b/styles/notes.sty
@@ -1,10 +1,15 @@
 % styles/notes.sty
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{styles/notes}[2024/01/01 Notes-specific configuration]
-
-\RequirePackage{styles/base}
-\RequirePackage{styles/math}
-\RequirePackage{styles/code}
+\ProvidesPackage{../../styles/notes}[2024/01/01 Notes-specific configuration]
+\RequirePackage{../../styles/math}
+\RequirePackage{../../styles/code}
+\RequirePackage{../../styles/base}
+%\RequirePackage{./math}
+%\RequirePackage{./code}
+%\RequirePackage{./base}
+%\RequirePackage{styles/math}
+%\RequirePackage{styles/code}
+%\RequirePackage{styles/base}
 
 % 笔记特定包
 \RequirePackage{tcolorbox}
