Detele Javascript in main.tex add code_simple.sty in styles change the absolut path in main.tex to the relative path

--- a/notes/test-note/main.tex
+++ b/notes/test-note/main.tex
@@ -1,5 +1,7 @@
 \documentclass[11pt]{article}
-\usepackage{/Users/wanchang/Documents/GitHub/latex-notes-template/styles/notes}
+%\usepackage{/Users/wanchang/Documents/GitHub/latex-notes-template/styles/notes}
+%input{../../styles/notes.sty} 
+\usepackage{../../styles/notes}
 
 \title{测试笔记 - LaTeX 模板验证}
 \author{你的名字}
@@ -60,15 +62,15 @@
 		print("计算完成")
 	\end{lstlisting}
 	
-	\begin{lstlisting}[style=javascript, caption=JavaScript示例]
-		function fibonacci(n) {
-			if (n <= 1) return n;
-			return fibonacci(n - 1) + fibonacci(n - 2);
-		}
+	%\begin{lstlisting}[style=javascript, caption=JavaScript示例]
+	%	function fibonacci(n) {
+	%		if (n <= 1) return n;
+	%		return fibonacci(n - 1) + fibonacci(n - 2);
+	%	}
 		
-		// 调用函数
-		console.log(fibonacci(10));
-	\end{lstlisting}
+	%	// 调用函数
+	%	console.log(fibonacci(10));
+	%\end{lstlisting}
 	
 	\section{笔记功能测试}
 	
