--- a/notes/test-note/main.tex
+++ b/notes/test-note/main.tex
@@ -62,15 +62,7 @@
 		print("计算完成")
 	\end{lstlisting}
 	
-	%\begin{lstlisting}[style=javascript, caption=JavaScript示例]
-	%	function fibonacci(n) {
-	%		if (n <= 1) return n;
-	%		return fibonacci(n - 1) + fibonacci(n - 2);
-	%	}
-		
-	%	// 调用函数
-	%	console.log(fibonacci(10));
-	%\end{lstlisting}
+	
 	
 	\section{笔记功能测试}
 	
@@ -93,7 +85,7 @@
 		\item LaTeX 编译功能
 		\item 数学公式渲染
 		\item 数学环境（定义、定理、证明等）
-		\item 代码高亮显示（Python 和 JavaScript）
+		\item 代码高亮显示（Python ）
 		\item 自定义笔记环境
 		\item 中文支持
 		\item GitHub Actions 自动部署
