--- a/styles/code.sty
+++ b/styles/code.sty
@@ -1,6 +1,6 @@
 % styles/code.sty
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{styles/code}[2024/01/01 Code configuration for notes]
+\ProvidesPackage{../../styles/code}[2024/01/01 Code configuration for notes]
 
 \RequirePackage{listings}
 \RequirePackage{xcolor}
