--- a/styles/notes.sty
+++ b/styles/notes.sty
@@ -2,8 +2,11 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{../../styles/notes}[2024/01/01 Notes-specific configuration]
 \RequirePackage{../../styles/math}
-\RequirePackage{../../styles/code}
+\RequirePackage{../../styles/code-simple}
 \RequirePackage{../../styles/base}
+%\RequirePackage{./math}
+%\RequirePackage{./code_simple}
+%\RequirePackage{./base}
 
 
 % 笔记特定包
